manifests/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-server
  namespace: team-tikchalal
  labels:
    app: recipes-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes-server
  template:
    metadata:
      labels:
        app: recipes-server
    spec:
      containers:
        - name: recipes-server
          image: ghcr.io/infer-noam/recipes/recipes-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: log-volume
              mountPath: /tmp/logs
      volumes:
        - name: log-volume
          emptyDir: {}
      imagePullSecrets:
        - name: recipes-pull-secret
