manifests/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes-server-service
  namespace: team-tikchalal
spec:
  selector:
    app: recipes-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
